added client id

--- a/auth_config.json
+++ b/auth_config.json
@@ -1,4 +1,4 @@
 {
-    "domain": "",
-    "clientId": ""
+    "domain": "dev-h70l4aco.us.auth0.com",
+    "clientId": "j9oysFlCmQRHs2cAZP9gBGH9NVSjmCFJ"
 }
